@@ -1,3 +1,8 @@
+2003-08-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl (::tkchat::doBug): simplify with URL that finds bug
+	id regardless of project
+
 2003-08-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Fix a problem with the event bindings when not
